изменения в главной,категория, контакты

--- a/src/category.html
+++ b/src/category.html
@@ -41,48 +41,41 @@
              <div class="p-2">
              </div>
          </div>
-
-
         <div class="container text-center">
             <div class="row align-items-center">
-                <div class="col form-control border-success">
-                    Товар 1
-                    <div class="container text-center">
-                        Цена
-                    </div>
-                    <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
                 </div>
-
-                <div class="col form-control border-success border border-dark">
-                    <span class="border border-dark"></span>
-                     <span class="border border-dark">
-                        Товар 2
-                     </span>
-                    <div class="container text-center ">
-                        Цена
-                    </div>
-                    <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
-
                 </div>
-                <div class="col form-control border-success">
-                    Товар 3
-                    <div class="container text-center">
-                        Цена
-                    </div>
-                    <div class="row  container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
                 </div>
@@ -90,44 +83,39 @@
         </div>
         <div class="container text-center">
             <div class="row align-items-center">
-                <div class="col form-control border-success">
-                    Товар 1
-                    <div class="container text-center">
-                        Цена
-                    </div>
-                    <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
                 </div>
-
-                <div class="col form-control border-success border border-dark">
-                    <span class="border border-dark"></span>
-                     <span class="border border-dark">
-                        Товар 2
-                     </span>
-                    <div class="container text-center ">
-                        Цена
-                    </div>
-                    <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
-
                 </div>
-                <div class="col form-control border-success">
-                    Товар 3
-                    <div class="container text-center">
-                        Цена
-                    </div>
-                    <div class="row  container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
                 </div>
