--- a/src/basic.html
+++ b/src/basic.html
@@ -9,23 +9,27 @@
 <body>
 <div class="row"><!-- Основной блок для работы с колонками -->
     <div class="col-2">
-        <div class="p-3 text-bg-primary bg-dark ">
-            Меню
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button"  class="btn btn-primary">Главная</button>
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button" class="btn btn-dark">Котегорий</button>
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button" class="btn btn-dark">Заказы</button>
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button" class="btn btn-dark">Кантакты</button>
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button" class="btn btn-dark">Пользователь</button>
+            <div class="row align-items-start">
+                <div class="p-3 text-bg-primary bg-dark ">
+                    Меню
+                </div>
+                <div class="p-2 text-bg-primary bg-dark ">
+                    <button type="button"  class="btn btn-primary">Главная</button>
+                </div>
+                <div class="p-2 text-bg-primary bg-dark ">
+                    <button type="button" class="btn btn-dark">Котегорий</button>
+                </div>
+                <div class="p-2 text-bg-primary bg-dark ">
+                    <button type="button" class="btn btn-dark">Заказы</button>
+                </div>
+                <div class="p-2 text-bg-primary bg-dark ">
+                    <button type="button" class="btn btn-dark">Кантакты</button>
+                </div>
+            </div>
+        <div class="row align-items-end">
+                <div class="p-2 text-bg-primary bg-dark ">
+                    <button type="button" class="btn btn-dark">Пользователь</button>
+                </div>
         </div>
     </div>
     <div class="col">
@@ -48,44 +52,39 @@
 
         <div class="container text-center">
             <div class="row align-items-center">
-                <div class="col form-control border-success">
-                    Товар 1
-                    <div class="container text-center">
-                        Цена
-                    </div>
-                    <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
                 </div>
-
-                <div class="col form-control border-success border border-dark">
-                    <span class="border border-dark"></span>
-                     <span class="border border-dark">
-                        Товар 2
-                     </span>
-                    <div class="container text-center ">
-                        Цена
-                    </div>
-                    <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
-
                 </div>
-                <div class="col form-control border-success">
-                    Товар 3
-                    <div class="container text-center">
-                        Цена
-                    </div>
-                    <div class="row  container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <div class="card bs-body-bg-rgb text-bg-black mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Цена</p>
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">описание товара</p>
+                        </div>
+                        <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
                        <button type="button" class="btn btn-link">Купить</button>
                     </div>
                 </div>
