--- a/src/contacts.html
+++ b/src/contacts.html
@@ -9,23 +9,29 @@
 <body>
 <div class="row"><!-- Основной блок для работы с колонками -->
     <div class="col-2">
-        <div class="p-3 text-bg-primary bg-dark ">
-            Меню
+        <div class="row align-items-start">
+            <div class="p-3 text-bg-primary bg-dark ">
+                Меню
+            </div>
+            <div class="p-2 text-bg-primary bg-dark ">
+                <button type="button"  class="btn btn-primary">Главная</button>
+            </div>
+            <div class="p-2 text-bg-primary bg-dark ">
+                <button type="button" class="btn btn-dark">Категорий</button>
+            </div>
+            <div class="p-2 text-bg-primary bg-dark ">
+                <button type="button" class="btn btn-dark">Заказы</button>
+            </div>
+            <div class="p-2 text-bg-primary bg-dark ">
+                <button type="button" class="btn btn-dark">Контакты</button>
+            </div>
         </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button"  class="btn btn-primary">Главная</button>
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button" class="btn btn-dark">Категорий</button>
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button" class="btn btn-dark">Заказы</button>
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button" class="btn btn-dark">Контакты</button>
-        </div>
-        <div class="p-2 text-bg-primary bg-dark ">
-            <button type="button" class="btn btn-dark">Пользователь</button>
+        <div  class="row align-items-center">
+            </div>
+        <div class="row align-items-end">
+            <div class="p-2 text-bg-primary bg-dark ">
+                <button type="button" class="btn btn-dark">Пользователь</button>
+            </div>
         </div>
     </div>
     <div class="col">
@@ -33,60 +39,28 @@
              <div class="container text-center">
 
                  <div class="p-6">
-                    <h2>Главная</h2>
+                    <h2>Контакты</h2>
                  </div>
              </div>
          </div>
-         <div class="container text-center">
-             <div class="p-6 text-bg-grey">
-                 вы находитесь на сапйте, предназначеномдля продажи товаров
-             </div>
-             <div class="p-2">
-             </div>
-         </div>
-
-
         <div class="container text-center">
             <div class="row align-items-center">
-                <div class="col form-control border-success">
-                    Товар 1
-                    <div class="container text-center">
-                        Цена
+                <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
+                    <div class="card-header">товар 1</div>
+                        <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                </div>
+                <div class="col container text-start">
+                    Наши контакты
+                    <div class="container text-start">
+
                     </div>
                     <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
-                       <button type="button" class="btn btn-link">Купить</button>
-                    </div>
-                </div>
-
-                <div class="col form-control border-success border border-dark">
-                    <span class="border border-dark"></span>
-                     <span class="border border-dark">
-                        Товар 2
-                     </span>
-                    <div class="container text-center ">
-                        Цена
+                         описание
                     </div>
                     <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
-                       <button type="button" class="btn btn-link">Купить</button>
-                    </div>
-
-                </div>
-                <div class="col form-control border-success">
-                    Товар 3
-                    <div class="container text-center">
-                        Цена
-                    </div>
-                    <div class="row  container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
-                       <button type="button" class="btn btn-link">Купить</button>
+                         примечание
                     </div>
                 </div>
             </div>
