финльные изменения 'контакты'

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -45,22 +45,43 @@
          </div>
         <div class="container text-center">
             <div class="row align-items-center">
-                <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-                    <div class="card-header">товар 1</div>
+
+                <div class="col-5"> <!-- -->
+                    <div class="card text-bg-white">
                         <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <form>
+                                <div class="mb-3 text-start">
+                                    Имя
+                                </div>
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" placeholder="Имя">
+                                </div>
+                                <div class="mb-3 text-start">
+                                    Почта
+                                </div>
+                                <div class="mb-3">
+                                    <input type="email" class="form-control" placeholder="Email">
+                                </div>
+                                <div class="mb-3 text-start">
+                                    Сообщение
+                                </div>
+                                <div class="mb-3">
+                                    <textarea class="form-control" placeholder="Сообщение" rows="3"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary ">Отправить</button>
+                            </form>
                         </div>
+                    </div>
                 </div>
                 <div class="col container text-start">
-                    Наши контакты
+                    <div class="container text-start text-decoration-underline">
+                    <h2>Наши контакты</h2>
+                    </div>
+                    <div class=" container text-start">
+                         <h3>описание</h3>
+                    </div>
                     <div class="container text-start">
-
-                    </div>
-                    <div class="row container text-center">
-                         описание
-                    </div>
-                    <div class="row container text-center">
-                         примечание
+                         <h3>примечание</h3>
                     </div>
                 </div>
             </div>
