--- a/src/catalog.html
+++ b/src/catalog.html
@@ -37,57 +37,60 @@
                  </div>
              </div>
          </div>
-         <div class="container text-center">
-             <div class="p-6 text-bg-grey">
-                 вы находитесь на сапйте, предназначеномдля продажи товаров
-             </div>
-             <div class="p-2">
-             </div>
-         </div>
-
 
         <div class="container text-center">
             <div class="row align-items-center">
                 <div class="col form-control border-success">
                     Товар 1
-                    <div class="container text-center">
-                        Цена
-                    </div>
                     <div class="row container text-center">
                          описание товара
                     </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
-                       <button type="button" class="btn btn-link">Купить</button>
+                    <div class="row align-items-center">
+                    <div class=" border border-info border-start-2 rounded-start">
+                        <button type="button" class="btn btn-light">Купить</button>
+                        <button type="button" class="btn btn-light">Купить</button>
                     </div>
+                        </div>
                 </div>
 
-                <div class="col form-control border-success border border-dark">
-                    <span class="border border-dark"></span>
-                     <span class="border border-dark">
-                        Товар 2
-                     </span>
-                    <div class="container text-center ">
-                        Цена
-                    </div>
-                    <div class="row container text-center">
-                         описание товара
-                    </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
-                       <button type="button" class="btn btn-link">Купить</button>
-                    </div>
-
-                </div>
                 <div class="col form-control border-success">
-                    Товар 3
-                    <div class="container text-center">
-                        Цена
-                    </div>
-                    <div class="row  container text-center">
+                    Товар 1
+                    <div class="row container text-center">
                          описание товара
                     </div>
-                    <div class="bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
-                       <button type="button" class="btn btn-link">Купить</button>
+                    <div class="row align-items-center">
+                    <div class=" border border-info border-start-2 rounded-start">
+                        <button type="button" class="btn btn-light">Купить</button>
+                        <button type="button" class="btn btn-light">Купить</button>
                     </div>
+                        </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col form-control border-success">
+                    Товар 1
+                    <div class="row container text-center">
+                         описание товара
+                    </div>
+                    <div class="row align-items-center">
+                    <div class=" border border-info border-start-2 rounded-start">
+                        <button type="button" class="btn btn-light">Купить</button>
+                        <button type="button" class="btn btn-light">Купить</button>
+                    </div>
+                        </div>
+                </div>
+
+                <div class="col form-control border-success">
+                    Товар 1
+                    <div class="row container text-center">
+                         описание товара
+                    </div>
+                    <div class="row align-items-center">
+                    <div class=" border border-info border-start-2 rounded-start">
+                        <button type="button" class="btn btn-light">Купить</button>
+                        <button type="button" class="btn btn-light">Купить</button>
+                    </div>
+                        </div>
                 </div>
             </div>
         </div>
